--- a/resources/settings.json
+++ b/resources/settings.json
@@ -1,1 +1,1 @@
-{"password":"123","alwaysOnTop":false,"bwTrayIcon":true}
+{"password":"123","alwaysOnTop":false,"bwTrayIcon":true,"blockListItemMediaWidth":50,"checkedItemStyle":0}
