202207061714 - account search & lock list timeout

--- a/resources/defaultSettings.json
+++ b/resources/defaultSettings.json
@@ -4,5 +4,6 @@
   "bwTrayIcon": true,
   "blockListItemMediaWidth": 50,
   "checkedItemStyle": 0,
-  "spellcheck": false
+  "spellcheck": false,
+  "lockedListTimeoutDuration": 300000
 }
