--- a/resources/settings.json
+++ b/resources/settings.json
@@ -1,1 +1,1 @@
-{"password":"123","alwaysOnTop":false,"bwTrayIcon":true,"blockListItemMediaWidth":50,"checkedItemStyle":0,"spellcheck":false}
+{"password":"123","alwaysOnTop":false,"bwTrayIcon":true,"blockListItemMediaWidth":50,"checkedItemStyle":0,"spellcheck":false,"lockedListTimeoutDuration":10000}
