--- a/src/defaultSettings.json
+++ b/src/defaultSettings.json
@@ -1,8 +1,9 @@
 {
   "password": "123",
   "alwaysOnTop": false,
-  "bwTrayIcon": true,
+  "bwTrayIcon": false,
   "blockListItemMediaWidth": 50,
   "checkedItemStyle": 0,
-  "spellcheck": false
+  "spellcheck": false,
+  "24hrtime": false
 }
